# pdf-intelligence-hub

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/extractors/: image_extractor.py  table_extractor.py
src/models/: README.md
src/processors/: cleaner.py
src/utils/: logger.py
